# WalletServiceFramework

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/workflows/: ci.yml
config/: Cargo.toml
currencies/: Cargo.toml  db_data
currencies/src/: error.rs  lib.rs  models.rs  schema.rs
docs/: README.md
docs/modules/: currencies.md  secret.md  transaction.md  user.md
ewf-core/: Cargo.toml
ewf-core/src/: bus.rs  error.rs  lib.rs  machines.rs  macros.rs  message.rs  module.rs
ewf-core/src/states/: mod.rs  transaction.rs  wallet.rs
examples/: websock_client.rs  websock_server.rs
history/: Cargo.toml
history/src/: error.rs  lib.rs  models.rs  schema.rs
keypair/: Cargo.toml
keypair/src/: error.rs  lib.rs  models.rs  schema.rs
mock-module/: Cargo.toml
mock-module/src/: lib.rs
prepare/: Cargo.toml
prepare/src/: lib.rs
reqwest-cli/: Cargo.toml
reqwest-cli/src/: error.rs  lib.rs
secret/: Cargo.toml
secret/src/: error.rs  lib.rs  models.rs  schema.rs
src/: bus.rs  currency_store.rs  error.rs  lib.rs  machines.rs  module_bus.rs  server.rs  transtion_caller.rs  wallet.rs
src/currency_mgr/: currency_wallet.rs  mod.rs
src/keypair_mgr/: keypair_wallet.rs  mod.rs
src/network/: mod.rs  websock_server.rs
src/pay_mgr/: mod.rs
src/states/: mod.rs  wallet.rs
src/storage/: currency_store.rs  keypair_store.rs  mod.rs
src/wallet_mgr/: mod.rs
test-suit/: Cargo.toml  db_data
test-suit/tests/: test_sm.rs
tests/: test_currency_store.rs  test_wallet_msf.rs
transaction/: Cargo.toml
transaction/src/: error.rs  lib.rs  transaction_msg.rs  tx_algorithm.rs  tx_payload_mgr.rs
tx-conn-local/: Cargo.toml
tx-conn-local/src/: conn_mgr.rs  error.rs  lib.rs
tx-conn-udp/: Cargo.toml
tx-conn-udp/src/: conn_mgr.rs  error.rs  lib.rs
user/: Cargo.toml
user/src/: error.rs  lib.rs  models.rs  schema.rs
wallet-common/: Cargo.toml
wallet-common/src/: common.rs  connect.rs  currencies.rs  history.rs  http_cli.rs  lib.rs  prepare.rs  query.rs  secret.rs  serde_comm.rs  transaction.rs  user.rs
websocket/: Cargo.toml
websocket/examples/: example_wallet.rs
websocket/src/: currencies.rs  currencies_resource.rs  error.rs  jsonrpc.rs  lib.rs  server.rs
