[package]
name = "wallet-service-framework"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wallet_service_framework"
path = "src/lib.rs"

[workspace]
members = [
  ".",
  "config",
  "currencies",
  "keypair",
  "transaction",
  "test-suit",
]

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.7"

[patch.crates-io]
wallet-service-framework = { path = "." }
config = { path = "config" }
currencies = { path = "currencies" }
keypair = { path = "keypair" }
transaction = { path = "transaction" }
test-suit = { path = "test-suit" }