[package]
name = "currencies"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "currencies"
path = "src/lib.rs"

[dependencies]
actix = "0.10.0-alpha.3"
ewf-core = { path = "../ewf-core" }
log = "0.4.11"
serde_json = "1.0.56"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
hex = { version = "0.4", default-features = false }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
