[package]
name = "ewf-core"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
async-trait = "0.1.36"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
