[package]
name = "keypair"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keypair"
path = "src/lib.rs"

[dependencies]
ewf-core = { path = "../ewf-core" }
diesel = { version = "1.4.5", features = ["sqlite"] }
log = "0.4.11"
hex = { version = "0.4", default-features = false }
serde_json = "1.0.56"
asymmetric-crypto = { git ="https://github.com/Yinet-project/asymmetric-crypto" }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
kv-object = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/KVObject" }
common-structure = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/CommonStructure" }