[package]
name = "reqwest-cli"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
log = "0.4.11"
reqwest = { version = "0.10", features = ["json"] , default-features = false }
serde_json = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
