[package]
name = "test-suit"
version = "0.1.0"
authors = ["tiannian <dtiannian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test_suit"
path = "src/lib.rs"

[dependencies]
log = "0.4.8"
wallet-service-framework = { path = ".." }
config = { path = "../config" }
currencies = { path = "../currencies" }
keypair = { path = "../keypair" }
transaction = { path = "../transaction" }
user = { path = "../user" }
reqwest-cli = { path = "../reqwest-cli" }

[dev-dependencies]
env_logger = "0.7.1"
