[package]
name = "transaction"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
ewf-core = { path = "../ewf-core" }
wallet-common = { path = "../wallet-common" }
log = "0.4.11"
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
hex = { version = "0.4", default-features = false }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
kv-object = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/KVObject" }
common-structure = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/CommonStructure" }
bincode = "1.3.1"
