[package]
name = "tx-conn-udp"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
chrono = "0.4.13"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
ewf-core = { path = "../ewf-core" }
wallet-common = { path = "../wallet-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
bincode = "1.3.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3.5"
tokio-tungstenite = "0.10.1"
