[package]
name = "wallet-common"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-object = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/KVObject" }
common-structure = { git = "https://curdata-bots:SBf(TdV2yeBP@github.com/Curdata-project/CommonStructure", branch = "fix_dependerror" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
chrono = "0.4.13"
http = "0.2.1"
reqwest = { version = "0.10", features = ["json"], default-features = false }

