[package]
name = "websocket"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
futures = "0.3.5"
crossbeam = "0.7.3"
async-task = "3.0.0"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
ewf-core = { path = "../ewf-core" }
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
jsonrpc-lite = "0.5.0"
jsonrpc-core = { path = "../../jsonrpc-ws" }
jsonrpc-websocket = { path = "../../jsonrpc-ws/jsonrpc-websocket" }
tokio = { version = "0.2", features = ["full"] }
currencies = { path = "../currencies" }