[package]
name = "websocket"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.0.0"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
ewf-core = { path = "../ewf-core" }
wallet-common = { path = "../wallet-common" }
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
jsonrpc-lite = "0.5.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = "0.10.1"


[dev-dependencies]
prepare = { path = "../prepare" }
currencies = { path = "../currencies" }
secret = { path = "../secret" }
transaction = { path = "../transaction" }
tx-conn-udp = { path = "../tx-conn-udp" }
history = { path = "../history" }
user = { path = "../user" }
env_logger = "0.7"
